[package]
name = "portal-updater"
version = "0.4.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["cookies"] }
mysql_async = "0.27"
ingress_intel_rs = { git = "https://github.com/nappa85/ingress-intel-rs.git" }
once_cell = "1.5"
log = "0.4"
env_logger = "0.8"
