[package]
name = "portal-updater"
version = "0.5.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread"] }
reqwest = { version = "0.11.6", features = ["cookies"] }
mysql_async = "0.28.1"
ingress_intel_rs = { git = "https://github.com/nappa85/ingress-intel-rs.git" }
once_cell = "1.8.0"
tracing = "0.1.29"
tracing-subscriber = { version =  "0.3.1", features = ["env-filter"] }
